<resources>
    <string name="app_name">GpsTracker</string>
    <string name="nombreMovil">Nombre Del Dispositivo</string>
    <string name="dcorta">Distancia Corta:</string>
    <string name="enviado">Peticiones Enviadas</string>
    <string name="nomincorrecto">Nombre Incorrecto:</string>
    <string name="nomusado">Nombre Usado:</string>
    <string name="reportado">Reportado:</string>
    <string name="Apagado">Apagado</string>
    <string name="Encendido">Encendido</string>
    <string name="usado">Nombre Usado. Introduzca Otro Nombre</string>
    <string name="incorrecto">Nombre Incorrecto. Introduzca Otro Nombre</string>
    <string name="cero">"0"</string>
    <string name="presionar">Luego de Cambiar el Nombre Apague/Encienda</string>
    <string name="nointernet1">No hay Conexion a internet</string>
    <string name="nointernet2">Cambie el nombre cuando halla conexion</string>
    <string name="noconexion">No conexion</string>
</resources>
