<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/alerta"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/dcorta"
        android:layout_alignStart="@+id/dcorta"
        android:layout_below="@+id/alerta1"
        android:text=""
        android:textColor="@android:color/holo_red_light" />

    <TextView
        android:id="@+id/alerta1"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/alerta"
        android:layout_alignStart="@+id/alerta"
        android:layout_below="@+id/nombreMovil"
        android:text=""
        android:textColor="@android:color/holo_red_light" />

    <TextView
        android:id="@+id/cdcorta"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignBaseline="@+id/dcorta"
        android:layout_alignBottom="@+id/dcorta"
        android:layout_alignLeft="@+id/creportado"
        android:layout_alignStart="@+id/creportado"
        android:text="@string/cero"  />

    <TextView
        android:id="@+id/creportado"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/textView4"
        android:layout_toEndOf="@+id/boton"
        android:layout_toRightOf="@+id/boton"
        android:text = "@string/cero" />

    <EditText
        android:id="@+id/nombreMovil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:hint="@string/nombreMovil" />

    <TextView
        android:id="@+id/dcorta"
        android:layout_width="210dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/alerta"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:hint="@string/dcorta" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/dcorta"
        android:layout_alignStart="@+id/dcorta"
        android:layout_below="@+id/dcorta"
        android:hint="@string/reportado" />

    <Button
        android:id="@+id/boton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/colorPrimary"
        android:text="@string/Apagado" />



</RelativeLayout>